--- a/_layouts/collections.html
+++ b/_layouts/collections.html
@@ -6,33 +6,32 @@ layout: page
 
 {{ content }}
 
-    <div class="row mb-3 justify-content-center py-5">
-        <div class="col-md-8 text-center">
-            <div class="input-group input-group-lg">
-                <input type="text" class="form-control form-control-lg" id="quickSearch" placeholder="Filter ... ">
-                <div class="input-group-append">
-                    <button class="btn btn-clearwater" type="button" title="Search" alt="Search" id="goButton">Search</button>
-                    <a class="btn btn-outline-secondary filter" href="#" data-filter="">Reset</a>
-                </div>
+<div class="row mb-3 justify-content-center py-5">
+    <div class="col-md-8 text-center">
+        <div class="input-group input-group-lg">
+            <input type="text" class="form-control form-control-lg" id="quickSearch" placeholder="Filter ... ">
+            <div class="input-group-append">
+                <button class="btn btn-ponderosa-pine" type="button" title="Search" alt="Search" id="goButton">Search</button>
+                <a class="btn btn-outline-secondary filter" href="#" data-filter="">Reset</a>
             </div>
-            <span class="info2 h2"><span id="numberOf">{{ collections | size }}</span> of {{ collections | size }} collections</span>
         </div>
+        <span class="info2 h2"><span id="numberOf">{{ collections | size }}</span> of {{ collections | size }} collections</span>
     </div>
+</div>
 
-    <div class="row">
-        <div class="col-md-12">
-            <div class="row" id="browseItems">
+<div class="row">
+    <div class="col-md-12">
+        <div class="row" id="browseItems">
             {% for c in collections %}
-            <div class="item col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 my-3">
-                <div class="card">
-                    <a href="{{ c.website }}">
-                        <img class="card-img-top lazyload" src="{{ c.image }}" alt="Image of {{ c.colltitle | escape }}">
-                    </a>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 my-3">
+                <div class="custom-card my-4">
+                    <div class="card-image">
+                        <a href="{{ c.website }}">
+                            <img class="img img-raised lazyload" src="{{ c.image }}" alt="Image of {{ c.colltitle | escape }}">
+                        </a>
+                    </div>
                     <div class="card-body text-center search">
-                        <h4 class="card-title"><a href="{{ c.website }}" class="text-dark">{{ c.colltitle }}</a></h4>
-                        <p class="card-text">
-
-                        </p>
+                        <h4 class="card-title mt-2"><a href="{{ c.website }}" class="text-dark">{{ c.colltitle }}</a></h4>
                         <p>
                             {%- capture btns -%}{% for f in fields %}{% if f.display-name-or-btn == 'btn' %}{{ c[f.field] | strip }};{% endif %}{% endfor %}{%- endcapture -%}
                             {%- assign btns = btns | split: ';' | compact -%}
@@ -41,19 +40,19 @@ layout: page
                             {% endif %}{% endfor %}
                         </p>
                         <p class="card-text"><small class="text-muted">
-                            {% for f in fields %}{% if f.display-name-or-btn != 'btn' %}{% if c[f.field] %}
-                            {% if f.display-name-or-btn %}<strong>{{ f.display-name-or-btn }}:</strong> {% endif %}{{ c[f.field] | truncatewords: 20 | replace: '""','"' }}
-                            {% unless forloop.last %}<br>{% endunless %}
-                            {% endif %}{% endif %}{% endfor %}
-                            <hr>
-                        </small></p>
+                                {% for f in fields %}{% if f.display-name-or-btn != 'btn' %}{% if c[f.field] %}
+                                {% if f.display-name-or-btn %}<strong>{{ f.display-name-or-btn }}:</strong> {% endif %}{{ c[f.field] | truncatewords: 20 | replace: '""','"' }}
+                                {% unless forloop.last %}<br>{% endunless %}
+                                {% endif %}{% endif %}{% endfor %}
+                            </small></p>
+                        <hr>
                         <p>
-                            <a href="{{ c.website }}" class="btn btn-light clearwater" title="link to {{ c.colltitle | escape }}" target="_blank" rel="noopener">View Collection</a>
+                            <a href="{{ c.website }}" class="btn btn-ponderosa-pine btn-round mt-3" title="link to {{ c.colltitle | escape }}" target="_blank" rel="noopener">View Collection</a>
                         </p>
                     </div>
                 </div>
             </div>
             {% endfor %}
         </div>
-        </div>
     </div>
+</div>
