--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,16 +5,16 @@ layout: default
 <div class="split-background">
   <div class="container-fluid">
       <div class="row">
-          <div class="col-md-2 col-12 px-0">
+          <div class="col-md-3 col-12 px-0">
               <!-- page nav button -->
               <button id="mobilePageNav" class="btn btn-secondary d-md-none col-sm-12 px-0 rounded-0" type="button">
-                  Filter Collections <span class="fas fa-chevron-down"></span>
+                  Search by: <span class="fas fa-chevron-down"></span>
               </button>
               <!-- page nav / sidebar -->
               {% include sidebar.html %}
           </div>
           <!-- page -->
-          <div class="page-block col-md-10 col-xs-12">
+          <div class="page-block col-md-9 col-xs-12">
 
               <main role="main" class="py-4 px-md-5">
                   <!-- page content -->
